fixing an issue on mobile nav.

--- a/src/Styles/_navBar.scss
+++ b/src/Styles/_navBar.scss
@@ -73,4 +73,9 @@ a:active {
         max-height: 100%;
         opacity: 1;
     }
+
+    li {
+        padding-left: 0;
+    }
+
 }
